# abathur-swarm

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE_CODE_IMPLEMENTATION_PROMPT.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.backup  DOCUMENTATION_VALIDATION_REPORT.md  Dockerfile  FIX_SUMMARY.md  IMPLEMENTATION_KICKOFF.md  IMPLEMENTATION_SUMMARY.md  INTENT_VERIFICATION.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETION_REPORT.md  QUICKSTART.md  RAG_IMPLEMENTATION.md  README.md  REVIEW-FINDINGS.md  REVIEW.md  STATUS.md  TASK_QUEUE_MCP_IMPLEMENTATION_SUMMARY.md  TEST_SUITE_IMPROVEMENTS.md  TREE_VISUALIZATION_SUMMARY.md  UNICODE_ASCII_TEST_REPORT.md  VALIDATION_FIX.md  VERIFICATION_REPORT.md  abathur.db  abathur.toml  agent-dag.md  architecture-analysis-task-summary-field.json  cli_help_output.txt  cli_help_output_fixed.txt  clippy.toml  clippy_output.txt  clippy_revalidation.txt  code_audit.txt  coverage.json  dag_prompt.md  (+22 more)
.abathur/: config.yaml  hooks.yaml
.cargo/: config.toml
.claude/: mcp_config.json  settings.json
.sqlx/: query-024319cffe417c7c4ff5fb6cf24ff57bd3dbae17d0e0db04ba7bb489aad8e15b.json  query-07c326edefb93b4815a39b50b98257e930b6307f2e4c7e207827a96d50fe38dc.json  query-1306f01317e5f0a25b08110fd84703d10badaef87f46f3dce90edfef8097c76c.json  query-1db60c34b03fb4e98c68f2921d4305ef9f389955dcebec7a6178f5ab5da02594.json  query-29a6389668d70b97e27d82992d94cb4aef5154a4ebb1fe29e808f6a0f526dc32.json  query-2b323b6d537aab0d51debe5c5a23ce33a588db8ba9fbda15402cf552d8eb8d2a.json  query-46987c1e1efd67800ce6a3b122fc05b41381174af01ca1a504096ed1de55ef81.json  query-4b1b5c50d6c2f7a094daabbc6357243db4dd1fbb400047c7831e1d3ab92b2715.json  query-4d098542195728db05b6262f11a4b92f3c4fc302c77536656e71f4bfa953993e.json  query-51ddad324d2625faa9c99a0f7a8f0df59a01d389bb82f605a4c7a3bc1508b534.json  query-7d678332de116e8df1aea302b550a5017bfa3bdd7e9f67d63e182989d915d68a.json  query-81dc217ece3a3bba0b4d98a4e3feed19b3114b84a771585f2f4f280c04668308.json  query-8c1fe40146f4f8ac6f578ad01f3a94ba23a064c9794daf198d9737231b343bf6.json  query-a27afeb622ced2601bf9786c204656840939d670c4021d44c729775119cf5b69.json  query-a92e69cd816a1cc75c662009398d3e0c7d29d724666232790bfe24ce65b5a340.json  query-b513abae6aafbcd7579f10cf9c1f9218f71d2a641c3d66850c0b402e788afaa9.json  query-c3fe5bd353fe55bd9b9a1c22950ab11e79b1a6657c39bbb8b2e558399d4b57b1.json  query-e7256e6b7a852cac7299743607b87ff63e077ee79f4705163bc6afbf95442642.json  query-e8b5c69bbd3199b645ab18ed2bf21eba937b75957ac07c5536eb59d0e1fd5326.json  query-f21549b0afcd4b42d0180bee537a02790156ab45861155a6e0a9415058e66568.json  query-f92d3f67f65c6adcdf908ace7cd83c21fc34b19d9d24512bbb9c691556cebaa4.json
Formula/: abathur.rb
benches/: priority_calculation.rs  task_queue.rs
coverage/: cobertura.xml  tarpaulin-report.html
crates/human-cerebrate/: Cargo.toml
crates/human-cerebrate/migrations/: 001_task_mappings.sql
crates/human-cerebrate/src/: config.rs  heartbeat.rs  main.rs  parser.rs  poller.rs  server.rs  state.rs
crates/human-cerebrate/src/clickup/: client.rs  models.rs
design_docs/: ABATHUR_PRD.md  DECISION_POINTS.md  EXECUTIVE_SUMMARY.md  PHASE3_PERFORMANCE_BENCHMARKS.json  README.md  TECH_SPECS_KICKOFF_PROMPT.md  TECH_SPECS_ORCHESTRATOR_HANDOFF.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  MIGRATION_CANCEL_RETRY_REMOVAL.md  OAUTH_SETUP_GUIDE.md  OAUTH_TROUBLESHOOTING.md  SECURITY_AUDIT.md  SWARM_ORCHESTRATOR_ARCHITECTURE.md  TUI_GUIDE.md  USER_GUIDE.md  WORKTREE_TESTING_GUIDE.md  a2a_finishing_touches.md  contract_shortcomings.md  human-cerebrate.md  index.md  mcp-architecture.md  project-context-integration.md  task_queue_api_reference.md  task_queue_architecture.md  task_queue_migration_guide.md  task_queue_troubleshooting.md  task_queue_user_guide.md  vacuum_performance_guide.md  validation-deadlock-fix-spec.md
examples/: README.md  abathur.toml  agent-template.toml  mcp_example.py  task_queue_examples.py  tree_renderer_demo.py
migrations/: 001_create_tasks_table.sql  001_initial_schema.sql  001_sessions_schema.sql  002_add_validation_fields.sql  002_agents_schema.sql  002_python_compat.sql  002_standardize_datetime_format.sql  002_update_memories_schema.sql  002_workflow_schema.sql  003_add_agent_instances.sql  003_add_prompt_chains.sql  003_task_schedule_schema.sql  004_fix_worktrees_fk.sql  004_task_type.sql  005_add_chain_id_to_tasks.sql  005_add_events_table.sql  005_distinct_accessors.sql  006_add_idempotency_key.sql  006_add_vector_memory_tables.sql  006_goal_convergence_check_at.sql  006_goal_task_rebuild.sql  007_add_chain_step_index.sql  007_add_idempotency_unique_constraint.sql  007_event_architecture.sql  007_refinement_requests.sql  008_add_vec0_virtual_table.sql  008_add_version_for_optimistic_locking.sql  008_event_consistency.sql  008_event_outbox.sql  008_fk_constraints.sql  009_add_chain_handoff_state.sql  009_merge_requests.sql  009_trigger_rules.sql  010_add_decomposition_fields.sql  010_event_source_process.sql  010_federated_goals.sql  011_add_missing_task_statuses.sql  011_add_task_fk_constraints.sql  011_dead_letter_queue.sql  012_add_needs_worktree.sql  (+12 more)
scripts/: README.md  check_ollama_setup.py  cleanup-worktrees.sh  cleanup_task_worktree.sh  create_feature_branch.sh  create_task_worktrees.sh  fix_stuck_tasks.sh  initialize_database.py  merge_task_branches.sh  prepare_feature_worktree.sh  publish-template.sh  quality_checks.sh  run_all_tests.sh  spawn_implementation_tasks.sh  test_vector_search_integration.py  update_progress.sh  validate_phase1_schema.py  validate_vector_search_setup.py
specs/: T10-spawn-task-agent-extraction.md  T11-swarm-orchestrator-decomposition.md  convergence-attractors.md  convergence-task-integration.md  github_issues_adapter_review.md
src/: lib.rs  main.rs
template/: .gitignore  .mcp.json  MCP_SETUP.md  README.abathur.md  README.md
tests/: IMPLEMENTATION_GUIDE.md  TEST_SUITE_SUMMARY.md  __init__.py  agent_repository_test.rs  api_regression_test.rs  bert_pipeline_integration_test.rs  chain_feature_name_extraction_test.rs  claude_api_integration_test.rs  cli_parsing.rs  (+36 more)
(+1162 files in other folders)
