[package]
name = "abathur"
version = "0.1.0"
edition = "2021"
description = "Self-evolving agentic swarm orchestrator"
license = "MIT"
authors = ["Abathur Team"]
repository = "https://github.com/abathur/abathur-swarm"
keywords = ["ai", "agents", "swarm", "orchestration", "llm"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "abathur"
path = "src/main.rs"

[lib]
name = "abathur"
path = "src/lib.rs"
