[package]
name = "abathur"
version = "0.4.0"
edition = "2024"
description = "Self-evolving agentic swarm orchestrator"
license = "MIT"
authors = ["Abathur Team"]
repository = "https://github.com/odgrim/abathur-swarm"
keywords = ["ai", "agents", "swarm", "orchestration", "llm"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"

# HTTP server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Process management
scopeguard = "1"
libc = "0.2"
futures = "0.3.31"
cron = "0.15"
reqwest = { version = "0.13.1", features = ["json"] }
serde_yaml = "0.9.34"
moka = { version = "0.12", features = ["future"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Terminal formatting
comfy-table = "7"
colored = "3"
chrono-humanize = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "abathur"
path = "src/main.rs"

[lib]
name = "abathur"
path = "src/lib.rs"
