[package]
name = "human-cerebrate"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "human-cerebrate"
path = "src/main.rs"

[dependencies]
abathur = { path = "../.." }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive", "env"] }
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
reqwest = { version = "0.13.1", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
rustls = "0.23"
rustls-pemfile = "2"
regex = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
futures = "0.3.31"

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"
